--- a/custom_templates/utils.jinja
+++ b/custom_templates/utils.jinja
@@ -1,26 +1,34 @@
-{% macro target_to_entities(target, regex_filter) %}
+{% macro target_to_entities(target, regex_filter = '') %}
 {%- set ns = namespace(entities=[]) %}
+
 {%- if target is mapping %}
     {%- set floor_ids = target.get('floor_id', []) %}
+
     {%- if floor_ids %}
         {%- set floor_ids = [ floor_ids ] if floor_ids is string else floor_ids %}
         {%- for floor_id in floor_ids %}
             {%- set ns.entities = ns.entities + [ floor_areas(floor_id) | map('area_entities') | sum(start=[]) ] %}
         {%- endfor %}
     {%- endif %}
+
     {%- for key in ['area_id', 'device_id', 'entity_id'] %}
         {%- set items = target.get(key, []) %}
+
         {%- if items %}
             {%- set items = [ items ] if items is string else items %}
             {%- set filter = key.split('_') | first %}
             {%- set items = items if filter == 'entity' else items | map(filter ~ '_entities') | sum(start=[]) %}
             {%- set ns.entities = ns.entities + [ items ] %}
         {%- endif %}
+
     {%- endfor %}
 {%- endif %}
+
 {%- set ns.entities = ns.entities | sum(start=[]) %}
+
 {%- if regex_filter %}
     {%- set ns.entities = ns.entities | select('match', regex_filter) %}
 {%- endif %}
+
 {{ ns.entities | unique | list }}
 {% endmacro %}
